<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/brick"
    tools:context=".UploadImageActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#90D3D3D3"
                android:freezesText="false"
                android:padding="20dp"
                android:text="@string/upload_an_image"
                android:textAlignment="center"
                android:textColor="@color/secondary"
                android:textSize="24sp"
                android:textStyle="bold"
                app:fontFamily="@font/asul" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="234dp"
                android:layout_height="215dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/uploadd"
                android:visibility="visible" />

            <Button
                android:id="@+id/choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/choose_an_image"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:fontFamily="@font/asul" />

            <Button
                android:id="@+id/upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/upload_an_image"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:fontFamily="@font/asul" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>